# audiopp

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
audiopp/: CMakeLists.txt  device.cpp  device.h  exception.h  library.h  listener.cpp  listener.h  logger.cpp  logger.h  sound.cpp  sound.h  sound_data.cpp  sound_data.h  sound_info.h  source.cpp  source.h  types.h  utils.cpp  utils.h
audiopp/effects/: builtin_effect.cpp  builtin_effect.h  effect.cpp  effect.h
audiopp/impl/: check.cpp  check.h  device_impl.cpp  device_impl.h  listener_impl.cpp  listener_impl.h  sound_impl.cpp  sound_impl.h  source_impl.cpp  source_impl.h
audiopp/impl/effects/: builtin_effect_impl.cpp  builtin_effect_impl.h
audiopp/loaders/: loader.cpp  loader.h  loader_flac.cpp  loader_mp3.cpp  loader_ogg.cpp  loader_wav.cpp
audiopp/loaders/decoders/: decoder_flac.h  decoder_mp3.c  decoder_mp3.h  decoder_vorbis.c  decoder_vorbis.h  decoder_wav.h
cmake/modules/: FindOpenAL.cmake
tests/: CMakeLists.txt  main.cpp
tests/tests_data/: pcm0822m.flac  pcm0844m.flac  pcm1644m.flac  pcm1644s.flac
tests/tests_data/flac/: pcm0808m.flac  pcm0808s.flac  pcm0811m.flac  pcm0811s.flac  pcm0822s.flac  pcm0844s.flac  pcm1608m.flac  pcm1608s.flac  pcm1611m.flac  pcm1611s.flac  pcm1622m.flac  pcm1622s.flac  pcm2408m.flac  pcm2408s.flac  pcm2411m.flac  pcm2411s.flac  pcm2422m.flac  pcm2422s.flac  pcm2444m.flac  pcm2444s.flac  pcm3208m.flac  pcm3208s.flac  pcm3211m.flac  pcm3211s.flac  pcm3222m.flac  pcm3222s.flac  pcm3244m.flac  pcm3244s.flac
